@@ -6,27 +6,20 @@ import groovy.lang.Closure;
 import org.jruby.RubyArray;
 import org.jruby.RubyRegexp;
 
-import java.util.regex.Pattern;
-
 public class GroovyStepDefinition implements StepDefinition {
     private final GroovyLanguage groovyLanguage;
-    private final Pattern pattern;
+    private final String regexp;
     private final Closure body;
 
 
-    public GroovyStepDefinition(GroovyLanguage groovyLanguage, Pattern pattern, Closure body) {
+    public GroovyStepDefinition(GroovyLanguage groovyLanguage, String regexp, Closure body) {
         this.groovyLanguage = groovyLanguage;
-        this.pattern = pattern;
+        this.regexp = regexp;
         this.body = body;
     }
 
-    GroovyStepDefinition(GroovyLanguage groovyLanguage, String pattern, Closure body) {
-        this(groovyLanguage, java.util.regex.Pattern.compile(pattern), body);
-    }
-
     public RubyRegexp regexp() {
-        // TODO: Translate and pass correct flags.
-        return RubyRegexp.newRegexp(JRuby.getRuntime(), pattern.pattern(), RubyRegexp.RE_OPTION_LONGEST);
+        return RubyRegexp.newRegexp(JRuby.getRuntime(), regexp, RubyRegexp.RE_OPTION_LONGEST);
     }
 
     public String file_colon_line() {
